Added xinit to manage xwiki, libreoffice server, redirect from server root to /xwiki/, fix persitence of xwiki extension data